--- a/rag-service.properties
+++ b/rag-service.properties
@@ -1,8 +1,8 @@
 spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.api-key=${OPEN_AI_API_KEY}
-spring.datasource.username=admin
-spring.datasource.password=1234
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.ai.vectorstore.pgvector.initialize-schema=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/rag-db
+spring.datasource.url=${POSTGRES_JDBC}
