--- a/rag-service.properties
+++ b/rag-service.properties
@@ -6,3 +6,4 @@ spring.ai.vectorstore.pgvector.initialize-schema=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${POSTGRES_JDBC}
+spring.servlet.multipart.max-file-size=50MB
